The overflow issue has been fixed

--- a/style.css
+++ b/style.css
@@ -11,10 +11,14 @@ html {
 .section-hero {
   width: 100%;
   height: 100vh;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  position: relative; }
+  position: relative;
+  overflow: hidden; }
+  .section-hero-div {
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    height: 100%;
+    width: 100%; }
 
 .hero-title {
   color: white;
